# news-fastapi

./: README.md  api.yaml  pyproject.toml
front/: authors-list.html  client.mjs  edit-author.html  index.html  news-details.html  news-list.html
src/: qa.sh
src/news_fastapi/: asyncio_playground.py
src/news_fastapi/adapters/: event_handlers.py
src/news_fastapi/adapters/auth/: authors.py  drafts.py  http_request.py  jwt.py  jwt_mock.py  news.py
src/news_fastapi/adapters/events/: handlers.py  rabbitmq.py  server.py
src/news_fastapi/adapters/persistence/: authors.py  dataclasses.py  drafts.py  events.py  news.py
src/news_fastapi/adapters/rest_api/: asgi.py  authors.py  drafts.py  exception_handlers.py  middleware.py  models.py  news.py  parameters.py
src/news_fastapi/application/: exceptions.py  transaction.py
src/news_fastapi/application/authors/: auth.py  services.py
src/news_fastapi/application/drafts/: auth.py  exceptions.py  services.py
src/news_fastapi/application/news/: auth.py  services.py
src/news_fastapi/application/rest_api/: application.py  authentication.py
src/news_fastapi/core/: transaction.py  utils.py
src/news_fastapi/core/authors/: auth.py  commands.py  dao.py  default_author.py  exceptions.py  models.py  queries.py  services.py
src/news_fastapi/core/drafts/: auth.py  commands.py  dao.py  exceptions.py  models.py  queries.py  services.py
src/news_fastapi/core/events/: handlers.py  registry.py
src/news_fastapi/core/news/: auth.py  commands.py  dao.py  models.py  queries.py  services.py
src/news_fastapi/domain/: author.py  authors.py  common.py  delete_author.py  draft.py  drafts.py  events.py  news.py  news_article.py  publish.py  value_objects.py
src/news_fastapi/domain/events/: models.py  publisher.py  server.py  store.py
src/news_fastapi/domain/seed_work/: entity.py  events.py
src/news_fastapi/infrastructure/auth/: authors.py  drafts.py  http_request.py  jwt.py  jwt_mock.py  news.py
src/news_fastapi/infrastructure/persistence/: authors.py  drafts.py  events.py  news.py  transaction.py
src/news_fastapi/infrastructure/rest_api/: main.py
src/news_fastapi/main/: asgi.py  container.py  generate_db_schema.py
src/news_fastapi/rest_api/: application.py  authentication.py  dependencies.py  jwt.py  main.py
src/news_fastapi/rest_api/authors/: auth.py  container.py  endpoints.py  models.py
src/news_fastapi/rest_api/news/: auth.py  container.py  endpoints.py  models.py
src/news_fastapi/storage/tortoise_orm/: models.py
src/news_fastapi/utils/: exceptions.py  format_callable.py  http_authentication.py  sentinels.py
src/tests/: fixtures.py  utils.py
src/tests/adapters/events/: fixtures.py  (+1 more)
src/tests/core/: fixtures.py  test_authors.py
src/tests/domain/: fixtures.py  test_author.py  test_authors.py  test_draft.py  test_drafts.py  test_events.py  test_news.py  test_news_article.py  test_publish.py
(+95 files in other folders)
