[tool.poetry]
name = "news-fastapi"
version = "0.1.0"
description = ""
authors = ["Dmitry S <sda97g@gmail.com>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "news_fastapi"
from = "src"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.101.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
aiosqlite = "^0.19.0"
pyjwt = "^2.8.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
