[tool.poetry]
name = "news-fastapi"
version = "0.1.0"
description = ""
authors = ["Dmitry S <sda97g@gmail.com>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "news_fastapi"
from = "src"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.101.0"}
pyjwt = "^2.8.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.20.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
anyio = "^3.7.1"
dependency-injector = "^4.41.0"
aiormq = "^6.7.7"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"
pylint = "^2.17.5"
wrapt = "^1.15.0"
dill = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[mypy]

[tool.isort]
profile = "black"
combine_as_imports = true

[tool.pylint."MESSAGES CONTROL"]
disable = """
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
    too-many-instance-attributes,
    too-many-arguments,
    too-few-public-methods,
    duplicate-code,
"""

[tool.pylint.BASIC]
good-names = """
    on
"""

[tool.pylint.MAIN]
ignore-paths = """
    news_fastapi/asyncio_playground.py
"""
